<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/app_logo"
                />
            <LinearLayout
                android:id="@+id/signUpContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:fontFamily="@font/jost_bold"
                    android:text="@string/getting_started"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:fontFamily="@font/jost_medium"
                    android:text="@string/signUp_words"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/bg_rounded_edittext"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginStart="@dimen/_7sdp"
                        android:layout_marginLeft="@dimen/_7sdp"
                        android:layout_marginEnd="@dimen/_7sdp"
                        android:layout_marginRight="@dimen/_7sdp"
                        android:src="@drawable/ic_email" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/jost_bold"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey_800"
                        android:textSize="@dimen/_13sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/bg_rounded_edittext"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginStart="@dimen/_7sdp"
                        android:layout_marginLeft="@dimen/_7sdp"
                        android:layout_marginEnd="@dimen/_7sdp"
                        android:layout_marginRight="@dimen/_7sdp"
                        android:src="@drawable/ic_lock" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/jost_bold"
                        android:hint="@string/pwd"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey_800"
                        android:textSize="@dimen/_13sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/bg_rounded_edittext"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginStart="@dimen/_7sdp"
                        android:layout_marginLeft="@dimen/_7sdp"
                        android:layout_marginEnd="@dimen/_7sdp"
                        android:layout_marginRight="@dimen/_7sdp"
                        android:src="@drawable/ic_person" />

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/jost_bold"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey_800"
                        android:textSize="@dimen/_13sdp" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/layoutSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/bg_rounded_theme"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@+id/layoutGO"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:fontFamily="@font/jost_semibold"
                        android:text="@string/sign_up"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp" />

                    <LinearLayout
                        android:id="@+id/layoutGO"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/_7sdp"
                        android:layout_marginRight="@dimen/_7sdp"
                        android:background="@drawable/bg_rounded_white"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:src="@drawable/ic_right_arrow" />
                    </LinearLayout>

                </RelativeLayout>

                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:fontFamily="@font/jost_medium"
                    android:gravity="center"
                    android:text="@string/already_have_ac_sign_in"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

            </LinearLayout>
        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerInParent="true"
            app:lottie_rawRes="@raw/loader"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:visibility="gone"
            />

    </RelativeLayout>

</ScrollView>
